# alieninvasion

./: README.md  pyproject.toml
alieninvasion/: InvasionSim.py  cli.py
