[tool.poetry]
name = "pyalien"
version = "0.1.0"
description = "Alien invasion game"
authors = ["0xdaveyg <david@planet-mono.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.3"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pyalien = "pyalien.cli:cli"